crates/bevy_reflect/compile_fail/tests/reflect_remote/incorrect_wrapper_fail.stderr
error[E0277]: the trait bound `MyFoo: ReflectRemote` is not satisfied
  --> tests/reflect_remote/incorrect_wrapper_fail.rs:LL:CC
   |
LL |     #[reflect(remote = MyFoo)]
   |                        ^^^^^ the trait `ReflectRemote` is not implemented for `MyFoo`

error[E0277]: the trait bound `MyFoo: ReflectRemote` is not satisfied
  --> tests/reflect_remote/incorrect_wrapper_fail.rs:LL:CC
   |
LL | #[derive(Reflect)]
   |          ^^^^^^^ the trait `ReflectRemote` is not implemented for `MyFoo`
   |
   = note: this error originates in the derive macro `Reflect` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
